--- a/js.html
+++ b/js.html
@@ -10,7 +10,12 @@
 <body>
 
     <script src="/javascript.js">  </script>
-   
+
+    <!-- <p id="demo"></p>
+
+    <script>
+        document.getElementById("demo").innerHTML = 5 + 9;
+    </script> -->
 </body>
 
 </html>
