--- a/js.html
+++ b/js.html
@@ -1,21 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-
+<html>
 <body>
+<p>Lorem ipsum dolor sit amet.</p>
 
-    <script src="/javascript.js">  </script>
 
-    <!-- <p id="demo"></p>
+<p id="demo"></p>
 
-    <script>
-        document.getElementById("demo").innerHTML = 5 + 9;
-    </script> -->
+<script src="/javascript.js">
+
+</script>
+
 </body>
-
-</html>
+</html>             
