--- a/js.html
+++ b/js.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link href="/index.css" rel="stylesheet">
+</head>
+
 <body>
-<p>Lorem ipsum dolor sit amet.</p>
+    <p>Lorem ipsum dolor sit amet.</p>
 
 
-<p id="demo"></p>
+    <!-- <p id="demo"></p> -->
 
-<script src="/javascript.js">
+    <script src="/javascript.js">
 
-</script>
+    </script>
 
 </body>
-</html>             
