some other problems that we solved in class, container with water should is unsolved

--- a/js.html
+++ b/js.html
@@ -15,7 +15,6 @@
     <!-- <p id="demo"></p> -->
 
     <script src="/javascript.js">
-
     </script>
-
+    <script src="/leetcodeProblems.js"></script>
 </body>
