--- a/js.html
+++ b/js.html
@@ -6,15 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="/index.css" rel="stylesheet">
+    <script src="/javascript.js"></script>
+    <script src="/leetcodeProblems.js"></script>
+    <script src="/dom.js"></script>
 </head>
 
 <body>
     <p>Lorem ipsum dolor sit amet.</p>
+    <h1>Website</h1>
 
 
-    <!-- <p id="demo"></p> -->
+    <label for="username">username </label>
+    <input id="username" required />
+    <label for="password">password </label>
+    <input id="password" required />
+    <button onclick="printHello()">login</button>
+    <p id="errorMessage" style="color:red;"></p>
+    <!-- <input type="text" name="fname" required>
+        <input type="submit" value="Submit"> -->
 
-    <script src="/javascript.js">
-    </script>
-    <script src="/leetcodeProblems.js"></script>
+
+
 </body>
